--- a/src/scss/components/Header/_nonvariables.scss
+++ b/src/scss/components/Header/_nonvariables.scss
@@ -3,5 +3,20 @@
 
     ul {
         margin: 0;
+        height: 75px;
+        display: flex;
+        align-items: center;
+        list-style-type: none;
+
+
+        li {
+            &:first-child {
+                flex: 1;
+            }
+
+            a {
+                color: #6a7070;
+            }
+        }
     }
 }
