Part IV - Prototyping - Video Quiz - QuizTitle and TextWithInlineHeader initial

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,6 +1,8 @@
 @import './components/Header/variables';
 
 @import './components/Header/nonvariables';
+@import './components/QuizTitle/nonvariables';
+@import './components/TextWithInlineHeader/nonvariables';
 
 body {
     margin: 0;
