--- a/src/scss/components/QuizTitle/_nonvariables.scss
+++ b/src/scss/components/QuizTitle/_nonvariables.scss
@@ -1,3 +1,21 @@
 .c-quiztitle--root {
     display: flex;
+
+    &>*:not(:first-child) {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    &>div:last-child {
+        border-left: 2px solid #ececec;
+    }
+
+    &>div:first-child {
+        border-right: 2px solid #ececec;
+        flex: 1;
+    }
+
+    h2 {
+        font-size: 16px;
+    }
 }
