--- a/src/scss/components/TextWithInlineHeader/_nonvariables.scss
+++ b/src/scss/components/TextWithInlineHeader/_nonvariables.scss
@@ -1,3 +1,11 @@
 .c-text-with-inline-header--root {
-    display: flex;
+
+    h1, h2, h3, h4, h5, h6 {
+        font-size: 16px;
+        display: inline-block;
+    }
+
+    p {
+        display: inline-block;
+    }
 }
