Part IV - Prototyping - Video Quiz - QuizDescription styling

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,6 +2,7 @@
 
 @import './components/Header/nonvariables';
 @import './components/QuizTitle/nonvariables';
+@import './components/QuizDescription/nonvariables';
 @import './components/TextWithInlineHeader/nonvariables';
 
 body {
