--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,6 +1,7 @@
 @import './components/Header/variables';
 
 @import './components/Header/nonvariables';
+@import './components/Quiz/nonvariables';
 @import './components/QuizTitle/nonvariables';
 @import './components/QuizDescription/nonvariables';
 @import './components/TextWithInlineHeader/nonvariables';
