Part IV - Prototyping - Video Quiz - form empty state styling

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,7 +1,10 @@
+@import './variables';
+
 @import './components/Header/variables';
 
 @import './components/Header/nonvariables';
 @import './components/Quiz/nonvariables';
+@import './components/QuizForm/nonvariables';
 @import './components/QuizTitle/nonvariables';
 @import './components/QuizDescription/nonvariables';
 @import './components/TextWithInlineHeader/nonvariables';
