--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -17,3 +17,8 @@ main {
     margin-left: 10%;
     margin-right: 10%;
 }
+
+.justify-flex-end {
+    display: flex;
+    justify-content: flex-end;
+}
