Part IV - Prototyping - Video Quiz - form onchange logic

--- a/src/scss/components/Header/_nonvariables.scss
+++ b/src/scss/components/Header/_nonvariables.scss
@@ -1,5 +1,5 @@
 .c-header-root {
-    background: $header-background-color;
+    background: $secondary-background-color;
 
     nav {
         margin-left: 5%;
