--- a/src/scss/components/QuizDescription/_nonvariables.scss
+++ b/src/scss/components/QuizDescription/_nonvariables.scss
@@ -1,5 +1,5 @@
 .c-quiz-description--root {
     &>.c-text-with-inline-header--root {
-        border-top: 2px solid #ececec;
+        border-top: 2px solid $border-color;
     }
 }
