Part IV - Prototyping - Video Quiz - QuizResults component initial

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -5,6 +5,7 @@
 @import './components/Header/nonvariables';
 @import './components/Quiz/nonvariables';
 @import './components/QuizForm/nonvariables';
+@import './components/QuizResults/nonvariables';
 @import './components/QuizTitle/nonvariables';
 @import './components/QuizDescription/nonvariables';
 @import './components/TextWithInlineHeader/nonvariables';
