--- a/src/scss/components/QuizForm/_nonvariables.scss
+++ b/src/scss/components/QuizForm/_nonvariables.scss
@@ -2,6 +2,7 @@
     background-color: $pearson-green;
     color: #eee;
     font-size: 2rem;
+    justify-content: center;
     text-align: center;
     display: flex;
     align-items: center;
