--- a/src/scss/components/Dropdown/_nonvariables.scss
+++ b/src/scss/components/Dropdown/_nonvariables.scss
@@ -1,6 +1,41 @@
 .c-dropdown--root {
+  position: relative;
+
+  button {
+    border: none;
+  }
+
+  .dropdown-heading {
+    background-color: #d9d9d9;
+    padding: 5px 15px;
+    font-size: 16px;
+  }
+
   ol {
+    z-index: 1;
     list-style-type: none;
     padding-left: 0;
+    position: absolute;
+    top: 35px;
+    width: 175px;
+    margin-top: 0;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+
+    .list-item-button {
+      width: 100%;
+      padding: 10px 0;
+
+      &:hover,
+      &:focus {
+        background: $pearson-green;
+        color: #fff;
+      }
+
+      .list-item-span {
+        &--incomplete {
+          color: #d2d2d2;
+        }
+      }
+    }
   }
 }
