Part IV - Prototyping - Video Quiz - Accordion styling

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,6 +2,7 @@
 
 @import './components/Header/variables';
 
+@import './components/Accordion/nonvariables';
 @import './components/Dropdown/nonvariables';
 @import './components/Header/nonvariables';
 @import './components/Quiz/nonvariables';
