Part IV - Prototyping - Video Quiz - QuizAccordion and button

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -6,6 +6,7 @@
 @import './components/Dropdown/nonvariables';
 @import './components/Header/nonvariables';
 @import './components/Quiz/nonvariables';
+@import './components/QuizAccordion/nonvariables';
 @import './components/QuizForm/nonvariables';
 @import './components/QuizResults/nonvariables';
 @import './components/QuizTitle/nonvariables';
