--- a/src/scss/components/QuizModal/_nonvariables.scss
+++ b/src/scss/components/QuizModal/_nonvariables.scss
@@ -1,4 +1,5 @@
 .c-quizmodal--root {
+  background-color: #fff;
   margin: 10px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2),
     2px 2px 2px 1px rgba(0, 0, 0, 0.2),
