--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -70,7 +70,11 @@ button {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: dodgerblue;
+    background: linear-gradient(
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.3)
+    ),
+    transparent;
     z-index: 1;
 
     &--root {
