Part IV - Prototyping - Video Quiz - minor style and a11y fixes

--- a/src/scss/components/Accordion/_nonvariables.scss
+++ b/src/scss/components/Accordion/_nonvariables.scss
@@ -28,7 +28,7 @@
         }
 
         &--incorrect {
-          color: red;
+          color: #B30000;
         }
       }
     }
@@ -59,7 +59,7 @@
         }
 
         &--incorrect {
-          color: red;
+          color: #B30000;
           position: relative;
 
           &::before {
