--- a/src/scss/components/Quiz/_nonvariables.scss
+++ b/src/scss/components/Quiz/_nonvariables.scss
@@ -46,7 +46,7 @@
     }
     
     #form-submit-error {
-        @include submit-modal-theme (red);
+        @include submit-modal-theme (#B30000);
         top: 0;
         left: 70px;
         width: 60%;
@@ -96,7 +96,6 @@
     
                 .cancel {
                     background-color: #d9d9d9;
-                    color: #727272;
                 }
     
                 .confirm {
