Part IV - Prototyping - Video Quiz - move styles for modal controller

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -10,6 +10,7 @@
 @import './components/QuizAccordion/nonvariables';
 @import './components/QuizForm/nonvariables';
 @import './components/QuizModal/nonvariables';
+@import './components/QuizModalController/nonvariables';
 @import './components/QuizResults/nonvariables';
 @import './components/QuizTitle/nonvariables';
 @import './components/QuizDescription/nonvariables';
